// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateModuleJniH can generate fixture COMPLEX_OBJECTS 1`] = `
Map {
  "SampleSpec.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateModuleJniH.js
 */

#import <ReactCommon/JavaTurboModule.h>
#import <ReactCommon/TurboModule.h>
#import <fb/fbjni.h>
#import <jsi/jsi.h>

namespace facebook {
namespace react {

/**
 * JNI C++ class for module 'SampleTurboModule'
 */
class JSI_EXPORT NativeSampleTurboModuleSpecJSI : public JavaTurboModule {
public:
  NativeSampleTurboModuleSpecJSI(const JavaTurboModule::InitParams &params);
};


std::shared_ptr<TurboModule> COMPLEX_OBJECTS_ModuleProvider(const std::string moduleName, const JavaTurboModule::InitParams &params);

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateModuleJniH can generate fixture EMPTY_NATIVE_MODULES 1`] = `
Map {
  "SampleSpec.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateModuleJniH.js
 */

#import <ReactCommon/JavaTurboModule.h>
#import <ReactCommon/TurboModule.h>
#import <fb/fbjni.h>
#import <jsi/jsi.h>

namespace facebook {
namespace react {

/**
 * JNI C++ class for module 'SampleTurboModule'
 */
class JSI_EXPORT NativeSampleTurboModuleSpecJSI : public JavaTurboModule {
public:
  NativeSampleTurboModuleSpecJSI(const JavaTurboModule::InitParams &params);
};


std::shared_ptr<TurboModule> EMPTY_NATIVE_MODULES_ModuleProvider(const std::string moduleName, const JavaTurboModule::InitParams &params);

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateModuleJniH can generate fixture NATIVE_MODULES_WITH_TYPE_ALIASES 1`] = `
Map {
  "SampleSpec.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateModuleJniH.js
 */

#import <ReactCommon/JavaTurboModule.h>
#import <ReactCommon/TurboModule.h>
#import <fb/fbjni.h>
#import <jsi/jsi.h>

namespace facebook {
namespace react {

/**
 * JNI C++ class for module 'AliasTurboModule'
 */
class JSI_EXPORT NativeAliasTurboModuleSpecJSI : public JavaTurboModule {
public:
  NativeAliasTurboModuleSpecJSI(const JavaTurboModule::InitParams &params);
};


std::shared_ptr<TurboModule> NATIVE_MODULES_WITH_TYPE_ALIASES_ModuleProvider(const std::string moduleName, const JavaTurboModule::InitParams &params);

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateModuleJniH can generate fixture REAL_MODULE_EXAMPLE 1`] = `
Map {
  "SampleSpec.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateModuleJniH.js
 */

#import <ReactCommon/JavaTurboModule.h>
#import <ReactCommon/TurboModule.h>
#import <fb/fbjni.h>
#import <jsi/jsi.h>

namespace facebook {
namespace react {

/**
 * JNI C++ class for module 'CameraRollManager'
 */
class JSI_EXPORT NativeCameraRollManagerSpecJSI : public JavaTurboModule {
public:
  NativeCameraRollManagerSpecJSI(const JavaTurboModule::InitParams &params);
};

/**
 * JNI C++ class for module 'ExceptionsManager'
 */
class JSI_EXPORT NativeExceptionsManagerSpecJSI : public JavaTurboModule {
public:
  NativeExceptionsManagerSpecJSI(const JavaTurboModule::InitParams &params);
};

/**
 * JNI C++ class for module 'ImagePickerIOS'
 */
class JSI_EXPORT NativeImagePickerIOSSpecJSI : public JavaTurboModule {
public:
  NativeImagePickerIOSSpecJSI(const JavaTurboModule::InitParams &params);
};


std::shared_ptr<TurboModule> REAL_MODULE_EXAMPLE_ModuleProvider(const std::string moduleName, const JavaTurboModule::InitParams &params);

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateModuleJniH can generate fixture SIMPLE_NATIVE_MODULES 1`] = `
Map {
  "SampleSpec.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateModuleJniH.js
 */

#import <ReactCommon/JavaTurboModule.h>
#import <ReactCommon/TurboModule.h>
#import <fb/fbjni.h>
#import <jsi/jsi.h>

namespace facebook {
namespace react {

/**
 * JNI C++ class for module 'SampleTurboModule'
 */
class JSI_EXPORT NativeSampleTurboModuleSpecJSI : public JavaTurboModule {
public:
  NativeSampleTurboModuleSpecJSI(const JavaTurboModule::InitParams &params);
};


std::shared_ptr<TurboModule> SIMPLE_NATIVE_MODULES_ModuleProvider(const std::string moduleName, const JavaTurboModule::InitParams &params);

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateModuleJniH can generate fixture TWO_MODULES_DIFFERENT_FILES 1`] = `
Map {
  "SampleSpec.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateModuleJniH.js
 */

#import <ReactCommon/JavaTurboModule.h>
#import <ReactCommon/TurboModule.h>
#import <fb/fbjni.h>
#import <jsi/jsi.h>

namespace facebook {
namespace react {

/**
 * JNI C++ class for module 'SampleTurboModule'
 */
class JSI_EXPORT NativeSampleTurboModuleSpecJSI : public JavaTurboModule {
public:
  NativeSampleTurboModuleSpecJSI(const JavaTurboModule::InitParams &params);
};

/**
 * JNI C++ class for module 'Sample2TurboModule'
 */
class JSI_EXPORT NativeSample2TurboModuleSpecJSI : public JavaTurboModule {
public:
  NativeSample2TurboModuleSpecJSI(const JavaTurboModule::InitParams &params);
};


std::shared_ptr<TurboModule> TWO_MODULES_DIFFERENT_FILES_ModuleProvider(const std::string moduleName, const JavaTurboModule::InitParams &params);

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateModuleJniH can generate fixture TWO_MODULES_SAME_FILE 1`] = `
Map {
  "SampleSpec.h" => "
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @generated by codegen project: GenerateModuleJniH.js
 */

#import <ReactCommon/JavaTurboModule.h>
#import <ReactCommon/TurboModule.h>
#import <fb/fbjni.h>
#import <jsi/jsi.h>

namespace facebook {
namespace react {

/**
 * JNI C++ class for module 'SampleTurboModule'
 */
class JSI_EXPORT NativeSampleTurboModuleSpecJSI : public JavaTurboModule {
public:
  NativeSampleTurboModuleSpecJSI(const JavaTurboModule::InitParams &params);
};

/**
 * JNI C++ class for module 'Sample2TurboModule'
 */
class JSI_EXPORT NativeSample2TurboModuleSpecJSI : public JavaTurboModule {
public:
  NativeSample2TurboModuleSpecJSI(const JavaTurboModule::InitParams &params);
};


std::shared_ptr<TurboModule> TWO_MODULES_SAME_FILE_ModuleProvider(const std::string moduleName, const JavaTurboModule::InitParams &params);

} // namespace react
} // namespace facebook
",
}
`;
